[package]
name = "evm_interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7",  features = ["derive"]}
ethers = {version = "2.0.10", features = ["solc-full"]}
ethers-solc = { version = "2.0.10", features = ["svm-solc"]}
eyre = "0.6.8"
revm = {version = "3.5.0", features=[ "serde"] }
serde = "1.0.190"
serde_json = "1.0.107"
