[package]
name = "evm-interpreter"
version = "1.0.0+2023112204"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7",  features = ["derive"]}
ethers = {version = "2.0.10", features = ["solc-full"]}
ethers-solc = { version = "2.0.10", features = ["svm-solc"]}
eyre = "0.6.8"
rand = "0.8.5"
revm = {git="https://github.com/bluealloy/revm", features=[ "serde"], rev="1609e07c68048909ad1682c98cf2b9baa76310b5"}
revme = {git="https://github.com/bluealloy/revm", rev="1609e07c68048909ad1682c98cf2b9baa76310b5"}
serde = "1.0.190"
serde_json = "1.0.107"
tempfile = "3.8.1"
walkdir = "2.4.0"


[[bin]]
name = "evm-interpreter"
path = "src/main.rs"